# RomanNumeralCalculator

./: .gitignore  CMakeLists.txt  README.md
include/roman/: calculator.h  parse.h  unparse.h
src/: calculator.c  parse.c  unparse.c
test/: CMakeLists.txt  check_calculator.c  check_parse.c  check_unparse.c
